# use-cases

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ASHRAE_211/: README.md
ASHRAE_211/examples/: L000_Audit-1.0.0.xml  L100_Audit-1.0.0.xml  L100_Audit-1.0.0_and_BSyncr-1.0.0.xml  L200_Audit-1.0.0.xml
ASHRAE_211/schematron/: L000_Audit-1.0.0.sch  L100_Audit-1.0.0.sch  L200_Audit-1.0.0.sch
ASHRAE_211/src/: L000_Audit-1.0.0.csv  L100_Audit-1.0.0.csv  L200_Audit-1.0.0.csv
BETTER/: README.md
BETTER/examples/: BETTER-1.0.0_SEED_Input-.xml  BETTER-1.0.0_SampleCourthouse.xml  BETTER-1.0.0_SampleHotel.xml  BETTER-1.0.0_SampleOffice.xml  BETTER_Input-1.0.0.xml  BETTER_SampleCourthouse-1.0.0.xml  BETTER_SampleHotel-1.0.0.xml  BETTER_SampleOffice-1.0.0.xml
BETTER/schematron/: BETTER-1.0.0.sch  BETTER_Input-1.0.0.sch
BETTER/src/: BETTER_Input-1.0.0.csv
BSyncr/: README.md
BSyncr/examples/: BSyncr_Input-1.0.0.xml
BSyncr/schematron/: BSyncr_Input-1.0.0.sch
BSyncr/src/: BSyncr_Input-1.0.0.csv
BuildingEQ/: README.md
BuildingEQ/examples/: BuildingEQ-1.0.0.xml
BuildingEQ/schematron/: BuildingEQ-1.0.0.sch
BuildingSync-Gem/: README.md
BuildingSync-Gem/examples/: L000_Pre-Simulation-1.0.0_01.xml  L000_Pre-Simulation-1.0.0_02.xml  L100_Pre-Simulation-1.0.0.xml
BuildingSync-Gem/schematron/: L000_Pre-Simulation-1.0.0.sch  L100_Pre-Simulation-1.0.0.sch
BuildingSync-Gem/src/: L000_Pre-Simulation-1.0.0.csv  L100_Pre-Simulation-1.0.0.csv
Emission/: README.md
SEED/: README.md
tests/: buildingsync_schematron.sch  test_schematron.py
(+23 files in other folders)
