[tool.poetry]
name = "use-cases"
version = "0.1.0"
description = ""
authors = ["Jie Xiong <jie.xiong@nrel.gov>", "Nicholas Long <nllong>"]

[tool.poetry.dependencies]
python = "^3.7"
testsuite = "0.1.3"
pytest = "^7.2.1"
pre-commit = "^2.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
